# rust-blog

./: Cargo.toml  Makefile  README.md  Rocket.toml
migrations/2019-08-05-003557_create_blog_table/: up.sql
migrations/2019-08-06-004803_create_post_table/: up.sql
src/: blogs.rs  main.rs  models.rs  schema.rs
src/models/: schema.rs
templates/: blog_nav.hbs  blogs.hbs  hello.hbs  layout.hbs  nav.hbs
templates/posts/: post_nav.hbs  posts.hbs
