[package]
name = "blog"
version = "0.1.0"
authors = ["jjorissen52 <jjorissen52@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
log = "0.4"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "json", "diesel_sqlite_pool"]